--- a/scss/jeet/_grid.scss
+++ b/scss/jeet/_grid.scss
@@ -1,19 +1,19 @@
 // Columns with Gutters
 @mixin column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0, $gutter: $jeet-gutter) {
-  $side: -get_layout_direction();
-  $column_widths: -get_column($ratios, $gutter);
-  $margin_last: 0;
-  $margin_l: $margin_last;
-  $margin_r: nth($column_widths, 2);
+  $side: _get-layout-direction();
+  $column-widths: _get-column($ratios, $gutter);
+  $margin-last: 0;
+  $margin-l: $margin-last;
+  $margin-r: nth($column-widths, 2);
   @if $offset != 0 {
     @if $offset < 0 {
       $offset: $offset * -1;
-      $offset: nth(-get_column($offset, nth($column_widths, 2)), 1);
-      $margin_last: $offset + nth($column_widths, 2) * 2;
-      $margin_r: $margin_last;
+      $offset: nth(_get-column($offset, nth($column-widths, 2)), 1);
+      $margin-last: $offset + nth($column-widths, 2) * 2;
+      $margin-r: $margin-last;
     } @else {
-      $offset: nth(-get_column($offset, nth($column_widths, 2)), 1);
-      $margin_l: $offset + nth($column_widths, 2);
+      $offset: nth(_get-column($offset, nth($column-widths, 2)), 1);
+      $margin-l: $offset + nth($column-widths, 2);
     }
   }
   @include cf();
@@ -23,12 +23,12 @@
   text-align: inherit;
   padding-left: 0;
   padding-right: 0;
-  width: nth($column_widths, 1) * 1%;
-  margin-#{$side}: $margin_l * 1%;
-  margin-#{opposite-direction($side)}: $margin_r  * 1%;
+  width: nth($column-widths, 1) * 1%;
+  margin-#{$side}: $margin-l * 1%;
+  margin-#{_opposite-direction($side)}: $margin-r  * 1%;
   @if $uncycle != 0 {
     &:nth-child(#{$uncycle}n) {
-      margin-#{opposite-direction($side)}: $margin_r * 1%;
+      margin-#{_opposite-direction($side)}: $margin-r * 1%;
       float: $side;
     }
 
@@ -38,8 +38,8 @@
   }
   @if $cycle != 0 {
     &:nth-child(#{$cycle}n) {
-      margin-#{opposite-direction($side)}: $margin_last * 1%;
-      float: opposite-direction($side);
+      margin-#{_opposite-direction($side)}: $margin-last * 1%;
+      float: _opposite-direction($side);
     }
 
     &:nth-child(#{$cycle}n + 1) {
@@ -47,7 +47,7 @@
     }
   } @else {
     &:last-child {
-      margin-#{opposite-direction($side)}: $margin_last * 1%;
+      margin-#{_opposite-direction($side)}: $margin-last * 1%;
     }
   }
 }
@@ -59,16 +59,16 @@
 
 // Columns without Gutters
 @mixin span($ratio: 1, $offset: 0) {
-  $side: -get_layout_direction();
-  $span_width: -get_span($ratio);
-  $margin_r: 0;
-  $margin_l: $margin_r;
+  $side: _get-layout-direction();
+  $span-width: _get-span($ratio);
+  $margin-r: 0;
+  $margin-l: $margin-r;
   @if $offset != 0 {
     @if $offset < 0 {
       $offset: $offset * -1;
-      $margin_r: -get_span($offset);
+      $margin-r: _get-span($offset);
     } @else {
-      $margin_l: -get_span($offset);
+      $margin-l: _get-span($offset);
     }
   }
   @include cf();
@@ -78,23 +78,23 @@
   padding-left: 0;
   padding-right: 0;
   text-align: inherit;
-  width: $span_width * 1%;
-  margin-#{$side}: $margin_l * 1%;
-  margin-#{opposite-direction($side)}: $margin_r * 1%;
+  width: $span-width * 1%;
+  margin-#{$side}: $margin-l * 1%;
+  margin-#{_opposite-direction($side)}: $margin-r * 1%;
 }
 
 // Source Ordering
-@mixin shift($ratios: 0, $col_or_span: column, $gutter: $jeet-gutter) {
+@mixin shift($ratios: 0, $col-or-span: column, $gutter: $jeet-gutter) {
   $translate: '';
-  $side: -get_layout_direction();
+  $side: _get-layout-direction();
   @if $side == right {
-    $ratios: -replace_nth($ratios, 0, nth($ratios, 1) * -1);
+    $ratios: _replace-nth($ratios, 0, nth($ratios, 1) * -1);
   }
-  @if $col_or_span == column or $col_or_span == col or $col_or_span == c {
-    $column_widths: -get_column($ratios, $gutter);
-    $translate: nth($column_widths, 1) + nth($column_widths, 2);
+  @if $col-or-span == column or $col-or-span == col or $col-or-span == c {
+    $column-widths: _get-column($ratios, $gutter);
+    $translate: nth($column-widths, 1) + nth($column-widths, 2);
   } @else {
-    $translate: -get_span($ratios);
+    $translate: _get-span($ratios);
   }
   position: relative;
   left: $translate * 1%;
@@ -120,10 +120,10 @@
 }
 
 // Horizontal Centering Block Elements
-@mixin center($max_width: 1410px, $pad: 0) {
+@mixin center($max-width: 1410px, $pad: 0) {
   @include cf();
   width: auto;
-  max-width: $max_width;
+  max-width: $max-width;
   float: none;
   display: block;
   margin-right: auto;
@@ -134,7 +134,7 @@
 
 // Stacking/Unstacking Elements
 @mixin stack($pad: 0, $align: false) {
-  $side: -get_layout_direction();
+  $side: _get-layout-direction();
   display: block;
   clear: both;
   float: none;
@@ -145,7 +145,7 @@
     margin-#{$side}: auto;
   }
   &:last-child {
-    margin-#{opposite-direction($side)}: auto;
+    margin-#{_opposite-direction($side)}: auto;
   }
   @if $pad != 0 {
     padding-left: $pad;
@@ -166,7 +166,7 @@
 
 // Unstacking
 @mixin unstack() {
-  $side: -get_layout_direction();
+  $side: _get-layout-direction();
   display: inline;
   clear: none;
   width: auto;
@@ -176,7 +176,7 @@
     margin-#{$side}: 0;
   }
   &:last-child {
-    margin-#{opposite-direction($side)}: 0;
+    margin-#{_opposite-direction($side)}: 0;
   }
   @if ($jeet-layout-direction == RTL) {
     text-align: right;
