--- a/tests/visual/scss/css/style.css
+++ b/tests/visual/scss/css/style.css
@@ -1,3 +1,4 @@
+@import url(reset.css);
 /*  Syntax Quick Reference
   --------------------------
   column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0, $gutter: $jeet-gutter)
