--- a/tests/stylus/css/style.styl
+++ b/tests/stylus/css/style.styl
@@ -1,8 +1,8 @@
 @import 'reset.css'
-@import '../../../../stylus/jeet'
+@import '../../../stylus/jeet'
 
 edit()
 
 section
   center(800px)
-  height: 40px
+  min-height: 40px
