--- a/tests/scss/css/style.css
+++ b/tests/scss/css/style.css
@@ -26,7 +26,7 @@ section {
   margin-left: auto;
   padding-left: 0;
   padding-right: 0;
-  height: 40px; }
+  min-height: 40px; }
   section:before, section:after {
     content: '';
     display: table; }
