--- a/tests/stylus/css/style.css
+++ b/tests/stylus/css/style.css
@@ -13,7 +13,7 @@ section {
   margin-left: auto;
   padding-left: 0;
   padding-right: 0;
-  height: 40px;
+  min-height: 40px;
 }
 section:before,
 section:after {
