--- a/tests/scss/css/style.css
+++ b/tests/scss/css/style.css
@@ -16,19 +16,106 @@
   background: #eee;
   background: rgba(0, 0, 0, 0.05); }
 
+html {
+  font-size: 11px;
+  text-align: center;
+  font-weight: bold;
+  color: #666; }
+
 section {
   *zoom: 1;
   width: auto;
-  max-width: 800px;
+  max-width: 1200px;
   float: none;
   display: block;
   margin-right: auto;
   margin-left: auto;
   padding-left: 0;
   padding-right: 0;
-  min-height: 40px; }
+  margin-top: 30px;
+  margin-bottom: 30px; }
   section:before, section:after {
     content: '';
     display: table; }
   section:after {
     clear: both; }
+  section p {
+    padding: 15px 0; }
+
+.column .twelfths .one div {
+  *zoom: 1;
+  float: left;
+  display: inline;
+  clear: none;
+  text-align: inherit;
+  padding-left: 0;
+  padding-right: 0;
+  width: 5.58333%;
+  margin-left: 0%;
+  margin-right: 3%;
+  overflow: hidden;
+  padding: 15px 0;
+  margin-bottom: 15px; }
+  .column .twelfths .one div:before, .column .twelfths .one div:after {
+    content: '';
+    display: table; }
+  .column .twelfths .one div:after {
+    clear: both; }
+  .column .twelfths .one div:last-child {
+    margin-right: 0%; }
+.column .flexible div {
+  padding: 15px 0; }
+  .column .flexible div:nth-child(1) {
+    *zoom: 1;
+    float: left;
+    display: inline;
+    clear: none;
+    text-align: inherit;
+    padding-left: 0;
+    padding-right: 0;
+    width: 26.42857%;
+    margin-left: 0%;
+    margin-right: 3%; }
+    .column .flexible div:nth-child(1):before, .column .flexible div:nth-child(1):after {
+      content: '';
+      display: table; }
+    .column .flexible div:nth-child(1):after {
+      clear: both; }
+    .column .flexible div:nth-child(1):last-child {
+      margin-right: 0%; }
+  .column .flexible div:nth-child(2) {
+    *zoom: 1;
+    float: left;
+    display: inline;
+    clear: none;
+    text-align: inherit;
+    padding-left: 0;
+    padding-right: 0;
+    width: 48.5%;
+    margin-left: 0%;
+    margin-right: 3%; }
+    .column .flexible div:nth-child(2):before, .column .flexible div:nth-child(2):after {
+      content: '';
+      display: table; }
+    .column .flexible div:nth-child(2):after {
+      clear: both; }
+    .column .flexible div:nth-child(2):last-child {
+      margin-right: 0%; }
+  .column .flexible div:nth-child(3) {
+    *zoom: 1;
+    float: left;
+    display: inline;
+    clear: none;
+    text-align: inherit;
+    padding-left: 0;
+    padding-right: 0;
+    width: 19.07143%;
+    margin-left: 0%;
+    margin-right: 3%; }
+    .column .flexible div:nth-child(3):before, .column .flexible div:nth-child(3):after {
+      content: '';
+      display: table; }
+    .column .flexible div:nth-child(3):after {
+      clear: both; }
+    .column .flexible div:nth-child(3):last-child {
+      margin-right: 0%; }
