--- a/tests/scss/css/style.css
+++ b/tests/scss/css/style.css
@@ -22,6 +22,13 @@ html {
   font-weight: bold;
   color: #666; }
 
+h1 {
+  margin: 0;
+  padding: 15px 0;
+  margin-bottom: 15px;
+  background: none;
+  color: #555; }
+
 section {
   *zoom: 1;
   width: auto;
@@ -32,8 +39,7 @@ section {
   margin-left: auto;
   padding-left: 0;
   padding-right: 0;
-  margin-top: 30px;
-  margin-bottom: 30px; }
+  margin-bottom: 45px; }
   section:before, section:after {
     content: '';
     display: table; }
