Make edit work in IE7+

--- a/scss/jeet/_grid.scss
+++ b/scss/jeet/_grid.scss
@@ -105,8 +105,8 @@
 // Edit Mode
 @mixin edit() {
   * {
-    background: #eee;
-    background: rgba(#000, .05);
+    background: rgba(0, 0, 0, .05);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#10000000, endColorstr=#10000000);
   }
 }
 
