--- a/stylus/jeet/_grid.styl
+++ b/stylus/jeet/_grid.styl
@@ -91,8 +91,8 @@ unshift()
 // Edit Mode
 edit()
   *
-    background: #eee
     background: rgba(#000, 5%)
+    unquote("filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#10000000, endColorstr=#10000000)")
 
 // Horizontal Centering Block Elements
 center(max_width = 1410px, pad = 0)
