--- a/tests/stylus/css/style.css
+++ b/tests/stylus/css/style.css
@@ -1,8 +1,9 @@
 @import 'reset.css';
 * {
-  background: #eee;
   background: rgba(0,0,0,0.05);
+filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#10000000, endColorstr=#10000000)
 }
+filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#10000000, endColorstr=#10000000)
 section {
   *zoom: 1;
   width: auto;
