--- a/scss/jeet/_functions.scss
+++ b/scss/jeet/_functions.scss
@@ -24,13 +24,22 @@
   @return if($jeet-layout-direction == "RTL", right, left);
 }
 
+// Helper - replace-nth
 @function jeet-replace-nth($list, $index, $value) {
-  @if type-of($index) != number or $index == 0 or abs($index) > length($list) {
-    @warn "Invalid index (#{$index}) for `replace-nth`.";
-    @return false;
+  // Fallback for Sass 3.2
+  @if function-exists("set-nth") != true {
+    $result: ();
+    $index: if($index < 0, length($list) + $index + 1, $index);
+
+    @for $i from 1 through length($list) {
+      $result: append($result, if($i == $index, $value, nth($list, $i)));
+    }
+
+    @return $result;
   }
-  $list: set-nth($list, $index, $value);
-  @return if(not is-true($value), purge($list), $list);
+
+  // Sass 3.3
+  @return set-nth($list, $index, $value);
 }
 
 // Helper - reverse
